# flet

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml  zizmor.yml
client/: pubspec.yaml
sdk/python/: .pre-commit-config.yaml  _typos.toml
sdk/python/examples/: gallery.yaml
sdk/python/examples/apps/declarative/counter/: main.py
sdk/python/examples/apps/greeter/: main.py
sdk/python/examples/apps/hello_world/: pyproject.toml
sdk/python/examples/apps/palette_editor/: palette_ui.py
sdk/python/examples/apps/templates/ai/: main.py  pyproject.toml
sdk/python/examples/apps/todo/: pyproject.toml
sdk/python/examples/community/mind_queue/: main.py
sdk/python/examples/controls/core/raw_image/game_of_life/: main.py  pyproject.toml
sdk/python/examples/controls/core/raw_image/mandelbrot/: main.py  pyproject.toml
sdk/python/examples/controls/core/raw_image/paint/: main.py  pyproject.toml
sdk/python/examples/controls/core/raw_image/photo_viewer/: main.py  pyproject.toml
sdk/python/examples/controls/core/raw_image/plasma/: main.py  pyproject.toml
sdk/python/examples/controls/material/data_table/sortable_and_selectable/: main.py
sdk/python/examples/cookbook/multiprocessing/: cancel_task.py  parallel_sort.py  persistent_worker.py  worker_progress.py
sdk/python/examples/extensions/charts/bar_chart/bar_chart_with_hover/: main.py
sdk/python/examples/extensions/charts/bar_chart/interactive_bar_chart/: main.py
sdk/python/examples/extensions/charts/candlestick_chart/candlestick_chart/: main.py
sdk/python/examples/extensions/charts/line_chart/line_chart_with_custom_axes/: main.py
sdk/python/examples/extensions/charts/line_chart/multi_series_line_chart/: main.py
sdk/python/examples/extensions/charts/matplotlib_chart/three_d/: main.py
sdk/python/examples/extensions/charts/pie_chart/pie_chart_with_hover_borders/: main.py
sdk/python/examples/extensions/charts/pie_chart/pie_chart_with_hover_sections/: main.py
sdk/python/examples/extensions/charts/pie_chart/pie_chart_with_icon_badges/: main.py
sdk/python/examples/extensions/charts/plotly_chart/plotly_bar_chart/: main.py
sdk/python/examples/extensions/charts/plotly_chart/plotly_box_plot/: main.py
sdk/python/examples/extensions/charts/plotly_chart/plotly_line_chart/: main.py
sdk/python/examples/extensions/charts/plotly_chart/plotly_pie_chart/: main.py
sdk/python/examples/extensions/charts/radar_chart/radar_chart/: main.py
sdk/python/examples/extensions/charts/scatter_chart/scatter_chart/: main.py
sdk/python/examples/services/accelerometer/accelerometer/: pyproject.toml
sdk/python/examples/services/barometer/barometer/: pyproject.toml
sdk/python/examples/services/gyroscope/gyroscope/: pyproject.toml
sdk/python/examples/services/haptic_feedback/haptic_feedback/: pyproject.toml
sdk/python/examples/services/magnetometer/magnetometer/: pyproject.toml
sdk/python/examples/services/shake_detector/shake_detector/: pyproject.toml
sdk/python/examples/services/user_accelerometer/user_accelerometer/: pyproject.toml
sdk/python/examples/tutorials/chat/: chat_3.py  main.py
sdk/python/templates/app/extension/{{cookiecutter.out_dir}}/: README.md
website/: sidebars.yml
website/blog/: 2026-07-14-flet-v-0-86-release-announcement.md  2026-07-17-smarter-flet-studio-with-ai-agent.md
website/docs/publish/: android.md
website/docs/updates/breaking-changes/: index.md
website/docs/updates/breaking-changes/v0-86-0/: android-extract-packages.md
