[project]
name = "raw-image-mandelbrot"
version = "1.0.0"
description = "Click-to-zoom Mandelbrot explorer streaming numpy-rendered frames through RawImage."
requires-python = ">=3.10"
keywords = ["raw image", "mandelbrot", "fractal", "zoom", "numpy", "interactive"]
authors = [{ name = "Flet team", email = "hello@flet.dev" }]
dependencies = ["flet", "numpy"]

[dependency-groups]
dev = ["flet-cli", "flet-desktop", "flet-web"]

[tool.flet.gallery]
categories = ["Displays/RawImage"]

[tool.flet.metadata]
title = "Mandelbrot explorer"
controls = ["RawImage", "GestureDetector", "Row", "OutlinedButton"]
layout_pattern = "toolbar above canvas"
complexity = "intermediate"
features = ["click-to-zoom animation", "numpy fractal rendering", "background-thread compute", "fps counter"]

[tool.flet]
org = "dev.flet"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"
